# OpenGL-Code

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
.cache/clangd/index/: glad.c.26F7CA6F0570A95A.idx  glad.h.F63E5A2AB0913EA4.idx  khrplatform.h.701F866E38572906.idx  main.cpp.41F5A4C935985915.idx
assets/shaders/: default.frag  default.vert
include/: mesh.h  shader.h  texture.h  window.h
include/glad/: glad.h
src/: glad.c  main.cpp  mesh.cpp  shader.cpp  stb_image.cpp  texture.cpp  window.cpp
src/window/: window.cpp  window.h
